# purge-controller-service

./: .description.md  .mandatory_files  .pre-commit-config.yaml  .static_files  Dockerfile  README.md  config_schema.json  example-config.yaml  example_config.yaml  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev-common.txt  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  .my-microservice.yaml  Dockerfile  dev_install  dev_launcher  devcontainer.json  docker-compose.yml  license_checker.py  openapi_from_app.py
.github/workflows/: check_config_schema_and_example.yaml  check_db_migration_scripts.yaml  check_mandatory_and_static_files.yaml  check_openapi_spec.yml  dev_cd.yaml  dev_cd.yml  static_code_analysis.yaml  unit_and_int_tests.yaml
.pyproject_generation/: pyproject_custom.toml
.readme_generation/: description.md
db_migration/alembic/: env.py
examples/: README.md
lock/: requirements-dev.txt  requirements.txt
my_microservice/: __init__.py  __main__.py  api.py  config.py  models.py  pubsub.py
my_microservice/api/: deps.py  main.py
my_microservice/core/: greeting.py
my_microservice/dao/: db_models.py
my_microservice/pubsub/: __init__.py  main.py
pcs/: __init__.py  cli.py  config.py  container.py  main.py
pcs/core/: file_deletion.py
scripts/: get_config_shema_and_example.py  get_package_name.py  license_checker.py  openapi_from_app.py  update_openapi_docs.py  update_template_files.py
tasks/: __init__.py  install.py  lint.py  tests.py  utils.py
tests/: test_dummy.py  test_typical_journey.py
(+32 files in other folders)
